--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,22 +1,139 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <title>Design Wiki</title>
+  <head>
+    <title>Design Wiki</title>
+    <%= csrf_meta_tags %>
 
-</head>
+    <!-- Expand the number of characters we can use in the document beyond basic ASCII 🎉 -->
+    <meta charset="utf-8">
 
-<body>
+    <!-- Connect Font Awesome CSS -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.2/css/all.css">
 
- <h1>test for h1</h1>  
-    <h2>test for h2</h2>
-    
-   <form class="form-inline">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search Public Design" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-  </form>   
-    
-</body>
+    <!-- Connect Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/sandstone/bootstrap.min.css">
+
+    <!-- Connect Bootstrap JavaScript and its dependencies -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+
+    <!-- Make it responsive to small screens -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
+  </head>
+
+  <body>
+
+    <div class="row justify-content-end" style="margin:10px">
+      <a href="#" class="nav-link">login</a>
+      <a href="/about_us" class="nav-link">About Us</a>
+    </div>
+
+
+    <!--Home image-->
+    <div class="row justify-content-center">
+
+      <img src="https://s3.amazonaws.com/sitebuilderreport-assets/stock_photos/files/000/044/278/small/designer-drawing-website-mockup_373x_2x.jpg?1515709901" style="margin:10px">
+    </div>
+
+    <!--Search bar-->
+    <div class="row justify-content-center">
+      <form class="form-row" action="/topic/search" >
+        <div class="col">
+        </div>
+        <div class="col">
+          <label class="sr-only" for="search_bar"></label>
+          <input type="text" class="form-control" name="search_entry" id="search_bar" placeholder="Search Design Wiki" style="min-width:600px;">
+        </div>
+        <div class="col">
+          <button class="btn btn-primary" type="submit">Search</button>
+        </div>
+      </form>
+    </div>
+
+    <div class="row justify-content-center">
+
+      <p class="text-muted">A Prototype by Eddie Paulino</p>
+    </div>
+
+    <hr class="my-4">
+
+    <!--List of topics-->
+    <div class="row justify-content-center">
+      <h3>Browse Topics</h3>
+    </div>
+
+
+    <div class="row justify-content-center">
+
+
+      <div class="col-md-2">
+        <div class="card border-primary mb-3" style="max-width: 20rem;">
+          <h3 class="card-header">Transportation</h3>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Vertical Curve Design</li>
+            <li class="list-group-item">Horizontal Curve Design</li>
+            <li class="list-group-item">Traffic Signal Timing</li>
+          </ul>
+        </div>
+
+      </div>
+
+      <div class="col-md-2">
+        <div class="card border-primary mb-3" style="max-width: 20rem;">
+          <div class="card-header">Construction</div>
+          <div class="card-body">
+            <h4 class="card-title">Estimating</h4>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!--List of Topics-->
+    <h1>
+      All topics
+    </h1>
+
+    <a href="/topic/new">
+      Add a new topic
+    </a>
+
+    <hr>
+
+    <table class="table">
+      <tr>
+
+        <th>
+          Title
+        </th>
+
+        <th>
+        </th>
+      </tr>
+
+      <% @topic.each do |topic| %>
+        <tr>
+
+          <td>
+            <%= topic.title %>
+          </td>
+
+          <td>
+            <a href="/topic/<%= topic.id %>" class="btn btn-primary">
+              Show topic
+            </a>
+          </td>
+        </tr>
+      <% end %>
+    </table>
+
+  </body>
 
 
 </html>
