--- a/app/views/home/search_results.html.erb
+++ b/app/views/home/search_results.html.erb
@@ -13,7 +13,7 @@
   All topics
 </h1>
 
-<a href="/topic/new">
+<a href="/topics/new">
   Add a new topic
 </a>
 
@@ -39,7 +39,7 @@
 
     
     <td>
-      <a href="/topic/<%= topic.id %>" class="btn btn-primary">
+      <a href="/topics/<%= topic.id %>" class="btn btn-primary">
         Show topic
       </a>
     </td>
