--- a/app/views/section_templates/show.html.erb
+++ b/app/views/section_templates/show.html.erb
@@ -10,10 +10,10 @@
 
 <dl>
   <dt>
-    Topic
+    Tab
   </dt>
   <dd>
-    <%= @section.topic_id %>
+    <%= @section.tab_id %>
   </dd>
 
   <dt>
