--- a/app/views/tab_templates/edit_form.html.erb
+++ b/app/views/tab_templates/edit_form.html.erb
@@ -34,11 +34,11 @@
 
   <!-- Label and input for tab_id -->
   <div class="form-group">
-    <label for="tab_id">
-      Tab
+    <label for="topic_id">
+      Topic
     </label>
 
-    <input type="text" id="tab_id" name="tab_id" class="form-control" value="<%= @tab.tab_id %>">
+    <input type="text" id="topic_id" name="topic_id" class="form-control" value="<%= @tab.topic_id %>">
   </div>
 
   <button class="btn btn-block btn-outline-secondary">
