--- a/app/views/tab_templates/new_form.html.erb
+++ b/app/views/tab_templates/new_form.html.erb
@@ -36,11 +36,11 @@
 
   <!-- Label and input for tab_id -->
   <div class="form-group">
-    <label for="tab_id">
-      Tab
+    <label for="topic_id">
+      Topic
     </label>
 
-    <input type="text" id="tab_id" name="tab_id" class="form-control" value="<%= @tab.try(:tab_id) %>">
+    <input type="text" id="topic_id" name="topic_id" class="form-control" value="<%= @tab.try(:topic_id) %>">
   </div>
 
   <button class="btn btn-block btn-outline-secondary">
