--- a/app/views/text_component_templates/index.html.erb
+++ b/app/views/text_component_templates/index.html.erb
@@ -15,7 +15,7 @@
     </th>
 
     <th>
-      Tab
+      Section
     </th>
 
     <th>
@@ -41,7 +41,7 @@
     </td>
 
     <td>
-      <%= text_component.tab_id %>
+      <%= text_component.section_id %>
     </td>
 
     <td>
