--- a/app/views/text_component_templates/show.html.erb
+++ b/app/views/text_component_templates/show.html.erb
@@ -10,10 +10,10 @@
 
 <dl>
   <dt>
-    Tab
+    Section
   </dt>
   <dd>
-    <%= @text_component.tab_id %>
+    <%= @text_component.section_id %>
   </dd>
 
   <dt>
