--- a/app/views/section_templates/new_form.html.erb
+++ b/app/views/section_templates/new_form.html.erb
@@ -18,11 +18,18 @@
 <form action="/create_section" method="post">
   <!-- Label and input for topic_id -->
   <div class="form-group">
-    <label for="topic_id">
-      Topic
+    <label for="tab_id">
+      Tab
     </label>
 
-    <input type="text" id="topic_id" name="topic_id" class="form-control" value="<%= @section.try(:topic_id) %>">
+    <input type="text" id="tab_id" name="tab_id" class="form-control" value="<%= @section.try(:tab_id) %>">
+  </div>
+    <div class="form-group">
+    <label for="section_title">
+      Section title
+    </label>
+
+    <input type="string" id="section_title" name="section_title" class="form-control" value="<%= @section.try(:title) %>">
   </div>
 
   <button class="btn btn-block btn-outline-secondary">
