--- a/app/views/tab_templates/index.html.erb
+++ b/app/views/tab_templates/index.html.erb
@@ -23,7 +23,7 @@
     </th>
 
     <th>
-      Tab
+      Topic
     </th>
 
     <th>
@@ -53,7 +53,7 @@
     </td>
 
     <td>
-      <%= tab.tab_id %>
+      <%= tab.topic_id %>
     </td>
 
     <td>
