--- a/app/views/text_component_templates/new_form.html.erb
+++ b/app/views/text_component_templates/new_form.html.erb
@@ -18,11 +18,11 @@
 <form action="/create_text_component" method="post">
   <!-- Label and input for tab_id -->
   <div class="form-group">
-    <label for="tab_id">
-      Tab
+    <label for="section_id">
+      Section
     </label>
 
-    <input type="text" id="tab_id" name="tab_id" class="form-control" value="<%= @text_component.try(:tab_id) %>">
+    <input type="text" id="section_id" name="section_id" class="form-control" value="<%= @text_component.try(:section_id) %>">
   </div>
 
   <!-- Label and input for header -->
