--- a/app/views/home/about_us.html.erb
+++ b/app/views/home/about_us.html.erb
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+  <style>
+    body {background-image: url("http://fc04.deviantart.net/fs71/f/2011/019/6/d/dune__atreides_final_by_angelitoon-d37l1yh.jpg");
+    }
+  </style>
 </head>
 
 <body>
@@ -10,16 +14,8 @@
   Goal: To collect and share the sum of all human knowledge on the theory and practice of Engineering.  
     
   </h2>
-<div class="container" style="background-image:url(https://kaboompics.com/cache/5/1/6/5/f/5165f4d4e90a9ff68b1b9f0901b1772eebff04f7.jpeg?version=v37);
-    background-position:center;
-    width:1200px;
-    height:800px;">
-    <h2>
-  Goal: To collect and share the sum of all human knowledge on the theory and practice of Engineering.  
-    
-  </h2>
+
   
-</div>
   
 </body>
 </html>
