--- a/app/views/section_templates/new_form.html.erb
+++ b/app/views/section_templates/new_form.html.erb
@@ -18,13 +18,12 @@
 <form action="/create_section" method="post">
   <!-- Label and input for topic_id -->
   <div class="form-group">
-    <label for="tab_id">
-      Tab
-    </label>
 
-    <input type="text" id="tab_id" name="tab_id" class="form-control" value="<%= @section.try(:tab_id) %>">
+    <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= params.fetch("tab_id") %>">
+    <input type="hidden" id="topic_id" name="topic_id" class="form-control" value="<%= params.fetch("topic_id") %>">
+
   </div>
-    <div class="form-group">
+  <div class="form-group">
     <label for="section_title">
       Section title
     </label>
@@ -32,7 +31,7 @@
     <input type="string" id="section_title" name="section_title" class="form-control" value="<%= @section.try(:title) %>">
   </div>
 
-  <button class="btn btn-block btn-outline-secondary">
+  <button class="btn btn-block btn-outline-secondary" type="submit">
     Create section
   </button>
 </form>
