--- a/app/views/text_component_templates/new_form.html.erb
+++ b/app/views/text_component_templates/new_form.html.erb
@@ -19,7 +19,7 @@
 <form action="/create_text_component" method="post">
   <!-- input for section_id -->
   <div class="form-group">
-    <input type="hidden" id="section_id" name="section_id" class="form-control" value="<%= params.fetch("tab_id") %>">
+    <input type="hidden" id="section_id" name="section_id" class="form-control" value="<%= params.fetch("section_id") %>">
   </div>
 
   <!-- Label and input for header -->
