--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <!-- Connect Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/sandstone/bootstrap.min.css">
 
+
     <!-- Connect Bootstrap JavaScript and its dependencies -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
@@ -69,7 +70,7 @@
             <li class="nav-item dropdown">
               <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" >
 
-                <%= current_user.first_name %>
+                <%= current_user.first_name %> <%= current_user.last_name %>
               </a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="/users/edit">Edit Profile</a>
@@ -92,6 +93,7 @@
 
 
     <%= yield %>
+
 
     <%= dev_tools if Rails.env.development? %>
   </body>
