--- a/app/views/tab_templates/new_form.html.erb
+++ b/app/views/tab_templates/new_form.html.erb
@@ -25,22 +25,13 @@
     <input type="text" id="title" name="title" class="form-control" value="<%= @tab.try(:title) %>">
   </div>
 
-  <!-- Label and input for num_of_tabs -->
+
+
+
+  <!--input for top_id -->
   <div class="form-group">
-    <label for="num_of_tabs">
-      Num of tabs
-    </label>
 
-    <input type="text" id="num_of_tabs" name="num_of_tabs" class="form-control" value="<%= @tab.try(:num_of_tabs) %>">
-  </div>
-
-  <!-- Label and input for tab_id -->
-  <div class="form-group">
-    <label for="topic_id">
-      Topic
-    </label>
-
-    <input type="text" id="topic_id" name="topic_id" class="form-control" value="<%= @tab.try(:topic_id) %>">
+    <input type="hidden" id="topic_id" name="topic_id" class="form-control" value="<%= params.fetch("topic_id") %>">
   </div>
 
   <button class="btn btn-block btn-outline-secondary">
