--- a/app/views/text_component_templates/edit_form.html.erb
+++ b/app/views/text_component_templates/edit_form.html.erb
@@ -12,7 +12,7 @@
 </h1>
 
 <hr>
-
+<div class="container">
 <form action="/update_text_component/<%= @text_component.id %>" method="post">
   <!-- Label and input for tab_id -->
   <div class="form-group">
@@ -36,9 +36,13 @@
     Update text component
   </button>
 </form>
+</div>
 
 <hr>
-
-<a href="/text_components">
+<a href="/delete_text_component/<%= @text_component.id %>">
+  Delete text component
+</a>
+<div></div>
+<a href="/topics">
   Go back
 </a>
