add google search

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -71,6 +71,19 @@
         </div>
       </form>
     </div>
+   <!-- Google custom search-->
+<script>
+  (function() {
+    var cx = '017062161739936208105:pwopiokatuq';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:searchbox-only></gcse:searchbox-only>
 
     <div class="row justify-content-center">
 
