--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,16 @@
         color: #fff;
       }
     </style>
-
-
+    
+    
+<!--google adsense-->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-3216373775176943",
+    enable_page_level_ads: true
+  });
+</script>
   </head>
 
   <body>
