google search fix

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -71,6 +71,7 @@
         </div>
       </form>
     </div>
+    
    <!-- Google custom search-->
 <script>
   (function() {
@@ -83,7 +84,7 @@
     s.parentNode.insertBefore(gcse, s);
   })();
 </script>
-<gcse:searchbox-only></gcse:searchbox-only>
+<gcse:search></gcse:search>
 
     <div class="row justify-content-center">
 
