--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,6 +7,8 @@
 
     <!-- Expand the number of characters we can use in the document beyond basic ASCII 🎉 -->
     <meta charset="utf-8">
+<!--    google verification meta tag-->
+<meta name="google-site-verification" content="Ncj69X48IxGWiH6x-4cWnthrl3BRC-rwuOxjrPRMhGk" />
 
     <!-- Connect Font Awesome CSS -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.2/css/all.css">
